--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
   <title></title>
   <link href="/css/main.css" media="all" rel="stylesheet" type="text/css">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="/js/underscore-min.js" type="text/javascript"></script>
   <script src="/js/functions.js" type="text/javascript"></script>
 </head>
 
