Adds form to page for user input, and implements validateAndCalculate() to handle the form submission

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
-  <div id="wrapper"></div>
+  <div id="wrapper">
+    <form id="form-calculate" action="/calculate">
+      <input type="text" id="input-amount" placeholder="Amount">
+      <input type="submit" value="Calculate">
+    </form>
+
+    <div id="result">
+    </div>
+  </div>
 </body>
 </html>
