--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>BBC - ByeByeCoins</title>
   <link href="/css/main.css" media="all" rel="stylesheet" type="text/css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="/js/underscore-min.js" type="text/javascript"></script>
@@ -10,6 +10,8 @@
 
 <body>
   <div id="wrapper">
+    <h1>ByeByeCoins</h1>
+    <p>Calculate how many Sterling coins you need to make your next payment</p>
     <form id="form-calculate" action="/calculate">
       <input type="text" id="input-amount" placeholder="Amount">
       <input type="submit" value="Calculate">
