--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BBC - BritishBinaryCoins</title>
+  <title>BBC - British Binary Coins</title>
   <link href="/css/main.css" media="all" rel="stylesheet" type="text/css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="/js/underscore-min.js" type="text/javascript"></script>
@@ -10,14 +10,22 @@
 
 <body>
   <div id="wrapper">
-    <h1>BritishBinaryCoins</h1>
-    <p>Calculate how many Sterling coins you need to make your next payment</p>
-    <form id="form-calculate" action="/calculate">
-      <input type="text" id="input-amount" placeholder="Amount">
-      <input type="submit" value="Calculate">
-    </form>
+    <div class="content">
+      <div class="header">
+        <h1 class="logo">British Binary Coins</h1>
+        <p>Calculate how many Sterling coins you need to make your next payment</p>
+        <p>Available coins: &#xa3;2 &#xa3;1 50p 20p 2p 1p</p>
+      </div>
 
-    <div id="result">
+      <div class="form">
+        <form id="form-calculate" action="/calculate">
+          <input type="text" id="input-amount" placeholder="Amount">
+          <input type="submit" class="submit" value="CALCULATE">
+        </form>
+      </div>
+
+      <div id="result">
+      </div>
     </div>
   </div>
 </body>
