Show coins in header

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,15 @@
       <div class="header">
         <h1 class="logo">British Binary Coins</h1>
         <p>Calculate how many Sterling coins you need to make your next payment</p>
-        <p>Available coins: &#xa3;2 &#xa3;1 50p 20p 2p 1p</p>
+        <p>
+          Available coins:
+          <span class="coin">&#xa3;2</span>
+          <span class="coin">&#xa3;1</span>
+          <span class="coin">50p</span>
+          <span class="coin">20p</span>
+          <span class="coin">2p</span>
+          <span class="coin">1p</span>
+        </p>
       </div>
 
       <div class="form">
