Now pence coins are smaller than pound coins

--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
         <p>Calculate how many Sterling coins you need to make your next payment</p>
         <p>
           Available coins:
-          <span class="coin">&#xa3;2</span>
-          <span class="coin">&#xa3;1</span>
-          <span class="coin">50p</span>
-          <span class="coin">20p</span>
-          <span class="coin">2p</span>
-          <span class="coin">1p</span>
+          <span class="coin pound">&#xa3;2</span>
+          <span class="coin pound">&#xa3;1</span>
+          <span class="coin pence">50p</span>
+          <span class="coin pence">20p</span>
+          <span class="coin pence">2p</span>
+          <span class="coin pence">1p</span>
         </p>
       </div>
 
