Implements a more modularized and testable code

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,7 @@
 <head>
   <title>BBC - British Binary Coins</title>
   <link href="/css/main.css" media="all" rel="stylesheet" type="text/css">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="/js/underscore-min.js" type="text/javascript"></script>
-  <script src="/js/functions.js" type="text/javascript"></script>
+  <script data-main="javascripts/main" src="/javascripts/require.js" type="text/javascript"></script>
 </head>
 
 <body>
