Adds tests for FormatHelper

--- a/test/runner.html
+++ b/test/runner.html
@@ -3,17 +3,17 @@
 <head>
   <title>Jasmine Spec Runner</title>
 
-  <link rel="stylesheet" type="text/css" href="../lib/jasmine/jasmine.css">
-  <script type="text/javascript" src="../lib/jasmine/jasmine.js"></script>
-  <script type="text/javascript" src="../lib/jasmine/jasmine-html.js"></script>
-  <script type="text/javascript" src="../lib/require/require.js"></script>
+  <link rel="stylesheet" type="text/css" href="../public/lib/jasmine/jasmine.css">
+  <script type="text/javascript" src="../public/lib/jasmine/jasmine.js"></script>
+  <script type="text/javascript" src="../public/lib/jasmine/jasmine-html.js"></script>
+  <script type="text/javascript" src="../public/lib/require/require.js"></script>
 
   <script type="text/javascript">
     requirejs.config({
       paths: {
         jquery: "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min",
-        underscore: "../lib/underscore-min",
-        domReady: "../lib/require/domReady",
+        underscore: "../public/lib/underscore-min",
+        domReady: "../public/lib/require/domReady",
         Constants: "../public/javascripts/Constants",
         FormatHelper: "../public/javascripts/FormatHelper",
         FormHelper: "../public/javascripts/FormHelper",
@@ -32,7 +32,9 @@
     });
 
     require([
-        "domReady!"
+        "domReady!",
+        "FormatHelper",
+        "spec/FormatHelperSpec"
       ], function(document) {
         jasmine.getEnv().addReporter(
           new jasmine.HtmlReporter()
