--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>BBC - British Binary Coins</title>
-  <link href="/css/main.css" media="all" rel="stylesheet" type="text/css">
-  <script data-main="javascripts/main" src="/javascripts/require.js" type="text/javascript"></script>
+  <link href="css/main.css" media="all" rel="stylesheet" type="text/css">
+  <script type="text/javascript" data-main="javascripts/main" src="lib/require/require.js"></script>
 </head>
 
 <body>
